Multi-user support with 3 modes
Change-Id: I6d2760dbc568c21cb04e4febee7b048e28be1693

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -124,6 +124,7 @@
 
     <string name="pref_title">Preferences</string>
     <string name="pref_category_security">Security</string>
+    <string name="pref_user_mode_title">Multi-user mode</string>
     <string name="pref_pin_title">Use PIN</string>
     <string name="pref_change_pin_title">Change PIN</string>
     <string name="pref_timeout_title">Access timeout</string>
