--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -73,6 +73,7 @@
   <string name="request_app_name">Приложение</string>
   <string name="pref_title">Настройки</string>
   <string name="pref_category_security">Защита</string>
+  <string name="pref_user_mode_title">Многопользовательский режим</string>
   <string name="pref_pin_title">Использование PIN-кода</string>
   <string name="pref_change_pin_title">Изменить PIN-код</string>
   <string name="pref_timeout_title">Таймаут доступа</string>
