--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright (c) 2011 Adam Shanks (ChainsDD)
-  
+
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-  
+
     http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -22,11 +22,11 @@
     <string name="description_log">Log</string>
     <string name="description_preferences">Preferences</string>
     <string name="description_extras">Extras</string>
-    
+
     <string name="page_label_info">info</string>
     <string name="page_label_apps">apps</string>
     <string name="page_label_log">log</string>
-    
+
     <string name="menu_extras">Extras</string>
     <string name="menu_get_elite">Get Elite</string>
     <string name="menu_preferences">Preferences</string>
@@ -81,7 +81,7 @@
     <string name="detail_request">Requested UID</string>
     <string name="detail_command">Command</string>
     <string name="detail_status">Status</string>
-    
+
     <string name="info_display_changelog">tap to display changelog</string>
     <string name="info_elite_installed">elite installed</string>
     <string name="info_elite_not_installed">elite not installed</string>
@@ -106,16 +106,17 @@
     <string name="notifications_enabled">\u0020\u0020\u0020\u0020Notifications enabled</string>
     <string name="logging_enabled">\u0020\u0020\u0020\u0020Logging enabled</string>
 
-    <string name="zero">0</string>
-    <string name="one">1</string>
-    <string name="two">2</string>
-    <string name="three">3</string>
-    <string name="four">4</string>
-    <string name="five">5</string>
-    <string name="six">6</string>
-    <string name="seven">7</string>
-    <string name="eight">8</string>
-    <string name="nine">9</string>
+    <!-- Do not translate -->
+    <string name="zero" translatable="false">0</string>
+    <string name="one" translatable="false">1</string>
+    <string name="two" translatable="false">2</string>
+    <string name="three" translatable="false">3</string>
+    <string name="four" translatable="false">4</string>
+    <string name="five" translatable="false">5</string>
+    <string name="six" translatable="false">6</string>
+    <string name="seven" translatable="false">7</string>
+    <string name="eight" translatable="false">8</string>
+    <string name="nine" translatable="false">9</string>
 
     <string name="request_message">%1$s is requesting Superuser access.\n\nWarning: If you did not initiate this action, or if you do not understand this request, it\'s generally a good idea to deny it.</string>
     <string name="request_more_info">Tap for more info</string>
@@ -225,7 +226,7 @@
     <string name="notif_outdated_ticker">Your su binary is outdated</string>
     <string name="notif_outdated_title">su binary outdated</string>
     <string name="notif_outdated_text">Tap to update su binary</string>
-    
+
     <string name="pin_enter_pin">Enter PIN</string>
     <string name="pin_new_pin">Enter new PIN</string>
     <string name="pin_confirm_pin">Confirm PIN</string>
@@ -235,13 +236,13 @@
         <item quantity="other">Nope - %1$d tries left</item>
     </plurals>
     <string name="pin_enter_secret_code">Enter secret code</string>
-    
+
     <string name="nfc_write_tag">Scan tag to write</string>
 
     <string name="malicious_apps_title">Warning</string>
     <plurals name="malicious_apps_message1">
-    	<item quantity="one">The following package was found to be malicious:</item>
-    	<item quantity="other">The following packages were found to be malicious:</item>
+        <item quantity="one">The following package was found to be malicious:</item>
+        <item quantity="other">The following packages were found to be malicious:</item>
     </plurals>
     <string name="malicious_apps_message2">Apps are marked as malicious because they contain elements that indicate they are attempting to grant root access, possibly without your consent. It is highly recommended you uninstall them immediately.</string>
     <string name="malicious_apps_uninstall">Uninstall</string>
@@ -258,7 +259,7 @@
     <string name="root_disabled_title">Enable root access?</string>
     <string name="root_disabled_summary">Root access is currently disabled for all applications by a system setting. Would you like to enable it?</string>
 
-    <!-- Do not translate any strings below, they are here to prevent build errors -->
-    <string name="before_secret_code">*#*#</string>
-    <string name="after_secret_code">#*#*</string>
+    <!-- Do not translate -->
+    <string name="before_secret_code" translatable="false">*#*#</string>
+    <string name="after_secret_code" translatable="false">#*#*</string>
 </resources>
