--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -10,7 +10,7 @@
   <string name="page_label_apps">applis</string>
   <string name="page_label_log">journal</string>
   <string name="menu_extras">Suppléments</string>
-  <string name="menu_preferences">Préférences</string>
+  <string name="menu_preferences">Paramètres</string>
   <string name="menu_clear">Effacer</string>
   <string name="menu_clear_log">Effacer journal</string>
   <string name="menu_toggle">Basculer</string>
@@ -73,6 +73,7 @@
   <string name="request_app_name">Appli</string>
   <string name="pref_title">Préférences</string>
   <string name="pref_category_security">Sécurité</string>
+  <string name="pref_user_mode_title">Mode multi-utilisateur</string>
   <string name="pref_pin_title">Utiliser code NIP</string>
   <string name="pref_change_pin_title">Changer le code NIP</string>
   <string name="pref_timeout_title">Temporisation d\'accès</string>
@@ -86,6 +87,7 @@
   <string name="pref_secret_code_title">Code secret</string>
   <string name="pref_secret_code_summary">Le code secret est *#*#%1$s#*#*</string>
   <string name="pref_advanced_prompt_title">Utiliser demande avancée</string>
+  <string name="pref_advanced_prompt_summary">Masquer les alertes de demande d\'accès</string>
   <string name="pref_category_applist_title">Liste des applis</string>
   <string name="pref_show_status_icons_title">Afficher les icônes de statut</string>
   <string name="pref_status_icon_type_title">Type d\'icône de statut</string>
