--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -99,7 +99,7 @@
     <string name="info_bin_version">su binary v%1$s (%2$d)</string>
     <string name="info_bin_version_not_found">su binary not found</string>
     <string name="info_check_for_updates">Tap to check for updates</string>
-    <string name="info_outdated_notification">Uutdated binary notification</string>
+    <string name="info_outdated_notification">Outdated binary notification</string>
     <string name="info_changelog_summary">Display the changelog</string>
     <string name="info_working">Working&#8230;</string>
 
